Fix text wrapping

--- a/osa5/bloglist-frontend/src/index.css
+++ b/osa5/bloglist-frontend/src/index.css
@@ -12,8 +12,8 @@
   background-color: red;
 }
 
-.no-wrap {
-  text-wrap: nowrap;
+.maxw {
+  min-width: max-content;
 }
 
 .horizontal {
